--- a/generic.html
+++ b/generic.html
@@ -73,28 +73,11 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-						</section>
 						<section class="split contact">
+							<section>
+								<h3>Address</h3>
+								<p>Lagos, Nigeria</p>
+							</section>
 							<section>
 								<h3>Phone</h3>
 								<p>Reach out via Email or LinkedIn</p>
