--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 										Prediction</a></h2>
 									</header>
 									<a href="https://github.com/titoausten/Global-AI-Hub-Machine-Learning-Bootcamp/blob/main/Medical%20Insurance%20Project%20(Final).ipynb" class="image fit"><img src="images/Medical-insurance (1).jpg" alt="" /></a>
-									<p>Led a team to which built a model with a R2 Score of 86.41% to predict medical insurance costs.</p>
+									<p>Led and managed a team which built a model to predict medical insurance costs for patients.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/titoausten/Global-AI-Hub-Machine-Learning-Bootcamp/blob/main/Medical%20Insurance%20Project%20(Final).ipynb" class="button">View Project</a></li>
 									</ul>
