--- a/index.html
+++ b/index.html
@@ -87,6 +87,17 @@
 								-->
 								<article>
 									<header>
+										<h2><a href="https://github.com/titoausten/human-pose-detection-with-movenet">Human Pose Detection<br />
+										with MoveNet</a></h2>
+									</header>
+									<a href="https://github.com/titoausten/human-pose-detection-with-movenet" class="image fit"><img src="https://github.com/titoausten/human-pose-detection-with-movenet/blob/main/img/human-pose-estimation-cover.jpg" alt="" /></a>
+									<p>This project simplifies the application of the MoveNet model to detect and visualize keypoints in humans.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/titoausten/human-pose-detection-with-movenet" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href="https://github.com/titoausten/Career-Longevity-Prediction">NBA Career Longevity<br />
 										Prediction</a></h2>
 									</header>
