--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">Nigerian Food<br />
+									<h2><a>Nigerian Food<br />
 									Classification</a></h2>
 									<p>This project aims at building a machine learning algorithm that classifies popular Nigerian dishes using CNN.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/Image_46.jpg" alt="" /></a>
+								<a class="image main"><img src="images/Image_46.jpg" alt="" /></a>
 								<ul class="actions special">
 									<!--
 										<li><a href="" class="button large">View Project</a></li>
@@ -87,10 +87,21 @@
 								-->
 								<article>
 									<header>
+										<h2><a>Hamstring Injury<br />
+										Detection</a></h2>
+									</header>
+									<a class="image fit"><img src="" alt="images/hamstring-injuries-980x649.jpg" /></a>
+									<p>Utilizing pose detection to detect hamstring issues in soccer players.</p>
+									<ul class="actions special">
+										><a class="button">In Progress...</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href="https://github.com/titoausten/human-pose-detection-with-movenet">Human Pose Detection<br />
 										with MoveNet</a></h2>
 									</header>
-									<a href="https://github.com/titoausten/human-pose-detection-with-movenet" class="image fit"><img src="https://github.com/titoausten/human-pose-detection-with-movenet/blob/main/img/human-pose-estimation-cover.jpg" alt="" /></a>
+									<a href="https://github.com/titoausten/human-pose-detection-with-movenet" class="image fit"><img src="images/human-pose-estimation-cover.jpg" alt="" /></a>
 									<p>This project simplifies the application of the MoveNet model to detect and visualize keypoints in humans.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/titoausten/human-pose-detection-with-movenet" class="button">View Project</a></li>
