--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 										<h2><a>Hamstring Injury<br />
 										Detection</a></h2>
 									</header>
-									<a class="image fit"><img src="" alt="images/hamstring-injuries-980x649.jpg" /></a>
+									<a class="image fit"><img src="images/hamstring-injuries-980x649.jpg" alt="" /></a>
 									<p>Utilizing pose detection to detect hamstring issues in soccer players.</p>
 									<ul class="actions special">
 										><a class="button">In Progress...</a></li>
