--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 									<a class="image fit"><img src="images/hamstring-injuries-980x649.jpg" alt="" /></a>
 									<p>Utilizing pose detection to detect hamstring issues in soccer players.</p>
 									<ul class="actions special">
-										><a class="button">In Progress...</a></li>
+										<li><a class="button">In Progress...</a></li>
 									</ul>
 								</article>
 								<article>
