--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 			<div id="wrapper" class="fade-in">
 
 				<!-- Intro -->
-					<div id="intro">	
+					<div id="intro">
+						<div class="image1">
+							<img src="images/PSX_20231022_123046.jpg" alt="Tito Osadebey">
+						</div>
 						<h1>Tito Osadebey</h1>
 						<p>AI Engineer | Computer Vision | Robotics</p>
 						<ul class="actions">
@@ -31,6 +34,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html#main">Projects</a></li>
 							<li><a href="generic.html">Contributions</a></li>
+							<li><a href="index.html#footer">Contact</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://twitter.com/titoausten" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -113,9 +117,10 @@
 										Prediction</a></h2>
 									</header>
 									<a href="https://github.com/titoausten/Career-Longevity-Prediction" class="image fit"><img src="images/nba_rookie.jpg" alt="" /></a>
-									<p>Employed machine learning techniques to determine if NBA drafted players' will flourish in their careers. To view the interactive web app for this project, click <a href="https://career-prediction-app.streamlit.app/">here</a>.</p>
+									<p>Employed machine learning techniques to determine if NBA drafted players' will flourish in their careers.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/titoausten/Career-Longevity-Prediction" class="button">View Project</a></li>
+										<li><a href="https://career-prediction-app.streamlit.app/" class="button primary">View Web App</a></li>
 									</ul>
 								</article>
 								<article>
@@ -169,7 +174,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Tito Osadebey</li><li>Design: JacZ Art</a></li></ul>
+						<ul><li>&copy; Tito Osadebey</li></ul>
 					</div>
 
 			</div>
