--- a/generic.html
+++ b/generic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Tito Osadebey - OSS Contributions</title>
+		<title>Contributions</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,6 +22,7 @@
 						<ul class="links">
 							<li><a href="index.html#nav">Projects</a></li>
 							<li class="active"><a href="generic.html">Contributions</a></li>
+							<li><a href="index.html#footer">Contact</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://twitter.com/titoausten" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -46,7 +47,7 @@
 									<a href="https://github.com/unifyai/ivy" class="image fit"><img src="images/ivylogo_dark.png" alt="" /></a>
 									<p>Ivy is an open-source machine learning framework that enables users to convert code into any ML framework.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/unifyai/ivy/pull/8900" class="button">View Contribution</a></li>
+										<li><a href="https://github.com/unifyai/ivy/pull/8900" class="button primary">View Contribution</a></li>
 									</ul>
 								</article>
 
@@ -57,7 +58,7 @@
 									<a href="https://github.com/apache/age" class="image fit"><img src="images/AGE LOGO.png" alt="" /></a>
 									<p>Apache AGE is a leading multi-model graph database which is an extension of PostgreSQL inspired by <a href="https://bitnine.net">Bitnine</a>'s AgensGraph.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/apache/age/pull/1193" class="button">View Contribution</a></li>
+										<li><a href="https://github.com/apache/age/pull/1193" class="button primary">View Contribution</a></li>
 									</ul>
 								</article>
 							</section>
@@ -65,42 +66,15 @@
 							<!-- Footer -->
 							<footer>
 								<div class="pagination">
-									<a href="#footer" class="button large scrolly">Get in touch with me</a>
+									<a href="index.html#footer" class="button large scrolly">Get in touch with me</a>
 								</div>
 							</footer>
 
 					</div>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<section class="split contact">
-							<section>
-								<h3>Address</h3>
-								<p>Lagos, Nigeria</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p>Reach out via Email or LinkedIn</p>
-							</section>
-							<section>
-								<h3>Email</h3>
-								<p><a href="https://osadebe.tito@gmail.com">osadebe.tito@gmail.com</a></p>
-							</section>
-							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="https://twitter.com/titoausten" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="https://linkedin.com/in/tito-osadebe" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://instagram.com/aiwithtee" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="https://github.com/titoausten" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</section>
-						</section>
-					</footer>
-
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Tito Osadebey</li><li>Design: JacZ Art</a></li></ul>
+						<ul><li>&copy; Tito Osadebey</ul>
 					</div>
 
 			</div>
